fix outline spacing

--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -139,6 +139,10 @@ wa-page > header {
   }
 }
 
+#outline-standard h2 {
+  margin-block-end: var(--wa-space-m);
+}
+
 /* Pro badges */
 wa-badge.pro::part(base) {
   background-color: var(--wa-brand-orange);
